# python_artm

./: .gitattributes  .gitignore  CMakeLists.txt  Makefile  README.md  dev-requirements.txt  requirements.txt  setup.py
artm/: __init__.py
artm/common/: __init__.py  callbacks.py  experiments.py  utils.py
artm/datasets/: common.py  main_cases.py  nips.py  sklearn_dataset.py  twitter_sentiment140.py
artm/loss_functions/: __init__.py
artm/optimizations/: __init__.py  base.py  gradient.py  thetaless.py  timed_default.py
artm/regularizers/: __init__.py
examples/: 20newsgroups.py
experiments/: common.py
experiments/balanced/: 20news_experiment.py  20newsgroups.py  ExperimentsResults.ipynb  manager.py
experiments/common/: default_plot.py
experiments/gensim/: 20newsgroups.py  manager.py  nips.py  twitter.py  twitter_sentiment140.py
experiments/thetaless/: 20NewsgroupsDocExperimentResults.ipynb  20NewsgroupsExperimentResults.ipynb  20newsgroups.py  20newsgroups_doc.py  ExperimentsResults.ipynb  NipsExperimentResults.ipynb  TopWordsExamples.ipynb  TwitterExperimentResults.ipynb  manager.py  nips.py  twitter.py
experiments/timings/: 20newsgroups.py  manager.py  nips.py  twitter.py  twitter_sentiment140.py
experiments/unbiased/: 20newsgroups.py  ExperimentsResults.ipynb  manager.py
experiments/unbiased_exp/: 20news_experiment.py
pyartm/: __init__.py  requirements.txt  setup.py
pyartm_datasets/: requirements.txt  setup.py
pyartm_experiments/: requirements.txt  setup.py
tools/: setup-dev-env.sh  setup-dev-venv.sh  setup-so-files.sh
(+123 files in other folders)
